--- a/app/globals.css
+++ b/app/globals.css
@@ -1,27 +1,116 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;700&family=PT+Sans:wght@400;700&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+    /* Colors Setup */
+    --clr-text: #000000;
+    --clr-background: #ffffff;
+    --clr-primary: #c2cab9;
+    --clr-accent: #6e5e7d;
+
+    /* Font Setup */
+    --ff-base: "PT Sans", sans-serif;
+    --ff-accent: "Nunito", sans-serif;
+
+    /* Font size Setup */
+    --fs-400: clamp(1.13rem, calc(1.08rem + 0.22vw), 1.25rem);
+    --fs-500: clamp(1.35rem, calc(1.2rem + 0.73vw), 1.77rem);
+    --fs-600: clamp(1.62rem, calc(1.31rem + 1.53vw), 2.5rem);
+    --fs-700: clamp(1.94rem, calc(1.39rem + 2.77vw), 3.53rem);
+    --fs-800: clamp(2.33rem, calc(1.41rem + 4.63vw), 5rem);
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+    :root {
+        /* Set dark colors */
+    }
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+* {
+    margin: 0;
+}
+
+html {
+    color-scheme: light dark;
+}
+
+img {
+    max-width: 100%;
+    display: block;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+    font-family: var(--ff-base);
+    font-size: var(--fs-400);
+    line-height: 1.6;
+    color: var(--clr-text);
+    background-color: var(--clr-background);
+}
+
+h1,
+h2,
+h3 {
+    font-family: var(--ff-accent);
+    line-height: 1.1;
+}
+
+h1 {
+    font-size: var(--fs-700);
+}
+
+h2 {
+    font-size: var(--fs-600);
+}
+
+h3 {
+    font-size: var(--fs-500);
+}
+
+a {
+    color: var(--clr-primary);
+}
+
+a:hover,
+a:focus {
+    color: var(--clr-accent);
+}
+
+.wrapper {
+    width: min(100% - 3rem, 75rem);
+    margin-inline: auto;
+}
+
+/* Switch on if needed */
+/* .flow > * + * {
+    margin-top: var(--flow-space, 1em);
+} */
+
+.form_grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(min(100%, 400px), 1fr));
+    gap: 1rem;
+}
+
+.cars_grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(min(100%, 16rem), 1fr));
+    place-items: center;
+    gap: 1rem;
+}
+
+.font_base {
+    font-family: var(--ff-base);
+}
+
+.font_accent {
+    font-family: var(--ff-accent);
 }
