Removed build errors

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,8 +8,8 @@
     /* Colors Setup */
     --clr-text: #000000;
     --clr-background: #ffffff;
-    --clr-primary: #c2cab9;
-    --clr-accent: #6e5e7d;
+    --clr-primary: #9258fd;
+    --clr-accent: #541eb8;
 
     /* Font Setup */
     --ff-base: "PT Sans", sans-serif;
